Wrap form badges in div to fix flex layout

--- a/public/style.css
+++ b/public/style.css
@@ -242,6 +242,7 @@ header p {
 .form {
     display: flex;
     gap: 3px;
+    align-items: center;
 }
 
 .form-badge {
